fix centering on mobile

--- a/mystyle2.css
+++ b/mystyle2.css
@@ -1343,7 +1343,7 @@ img {
     }
 
     #JSgpA4lnCFgLsF5O {
-        grid-area: 1 / 1 / 3 / 9;
+        grid-area: 1 / 1 / 3 / 14;
         position: relative;
     }
 
